# stock-backtrader-webapp

./: .gitignore  AGENTS.md  CLAUDE.md  QMT.md  README.md  app.py  backtest_etf_momentum_nb.py  pyproject.toml  readme.md  verify_etf_momentum.py
.claude/: settings.local.json
.codebase-memory/: artifact.json  graph.db.zst
.omx/: metrics.json
R/: README.md
charts/: __init__.py  matplotlib_config.py  results.py  stock.py
config/: strategy.yaml
data_cache/: 513100_SS_2024-01-01_2026-01-26.pkl
docs/: qmt_data_service.md
examples/: backtest_constants.py  bootstrap.py  rotation_backtest_common.py
frames/: __init__.py  form.py  sidebar.py
qmt/: QMT.md  __init__.py  data_adapter.py  data_gateway.py  data_service_strategy.py  etf_momentum.py  requirements.3.13.11.txt  requirements.txt  test.py
strategy/: __init__.py  analyzer.py  base.py  data_loader.py  equal_weight.py  etf_momentum.py  etf_momentum_backtrader.py  just_buy_hold.py  leading_rotation.py  ma.py  macross.py  performance_calculator.py  rotation_base.py  sector_rotation.py  turtle_trading.py
tests/: __init__.py  base_test.py  etf_momentum_backtest_test.py  etf_momentum_test.py  leading_rotation_test.py  ma_test.py  macross_test.py  processing_metrics_test.py  qmt_data_gateway_test.py  qmt_fetch_data_test.py  rotation_turtle_backtest_test.py  sector_rotation_test.py  turtle_trading_test.py  xtdata_client_test.py  xtquant_account_query_test.py  xtquant_market_data_test.py  xtquant_miniqmt_environment_test.py
utils/: colors.py  commission.py  etf_momentum_backtest.py  fetch_data.py  processing.py  (+5 more)
(+124 files in other folders)
