[project]
name = "stock-backtrader-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.16.81",
    "backtrader==1.9.78.123",
    "empyrical>=0.5.5",
    "loguru==0.7.3",
    "matplotlib>=3.8.0",
    "numpy>=1.26,<2.0",
    "pandas==2.2.3",
    "pandas-datareader>=0.10.0",
    "pandas-stubs~=2.2.3",
    "pre-commit==4.2.0",
    "pydantic==2.11.3",
    "pyecharts==2.0.8",
    "pyyaml==6.0.2",
    "streamlit==1.44.1",
    "streamlit-echarts==0.4.0",
    "yfinance>=0.2.0",
]
